Collect performance data during playback run

--- a/packaging/rpm/ansible-runner.spec.j2
+++ b/packaging/rpm/ansible-runner.spec.j2
@@ -17,6 +17,7 @@ Requires: openssh-clients
 Requires: python-daemon
 Requires: python-pexpect
 Requires: python-psutil
+Requires: libcgroup-tools
 
 %description
 A CLI and Python library that helps interfacing with Ansible from other systems
